--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^11.3.0",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
+    "framer-motion": "^12.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
