--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
-    "axios": "^1.7.9",
+    "axios": "^1.9.0",
     "firebase": "^11.3.0",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.4.7",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
